--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,8 @@ name: Node.js CI
 
 on:
   push:
-    branches: [master]
+        os: [ubuntu-latest, windows-2016]
+        node-version: [8.x, 10.x]
   pull_request:
     branches: [master]
 
